app/styles/theme/nw-card.scss
.nw-card {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  &.nw-card-fixed-size {
    width: 300px;
    height: 262px;
  }
  &.nw-prompt-card {
    border: dashed 2px $nw-lightgreyblue;
    background-color: transparent;
    background-image: none;
    color: $nw-lightgrey;
    
    a {
      color: $nw-lightgrey;
      font-family: SourceSerifPro;
      font-size: 26px;
      text-align: center;
    }
  }
  border-radius: 5px;
  border: solid 1px $nw-lightgreyblue;
  background-image: url('/images/global/card_back.png');
  background-repeat: repeat-x;
  background-size: 4px 100%;
  &.nw-card-white {
    background: $nw-white;
  }
  
  .nw-card-header {
    flex: 0 0 28px;
    display: flex;
    border-top-right-radius: 5px;
    border-top-left-radius: 5px;
    justify-content: space-between;
    height: 28px;
    &.nw-card-header-no-height {
      flex: 0 0 0px;
      height: 0px;
    }
    &.nw-card-page-card {
      flex: 0 0 144px;
      &.nw-blue-back {
        flex: 0 0 120px;
        background-color: #f2f8fa;
      }
    }
    &.nw-card-horizontal {
      flex-direction: row;
      align-items: center;
      .nw-flex-full {
        flex: 1 1 100%;
      }
      .nw-one-third {
        flex: 0 0 33%;
        text-align: center;
        padding: 10px;
        img {
          width: 100%;
        }
      }
      .nw-two-thirds {
        flex: 0 0 67%;
      }
      .nw-two-fifths {
        padding: 10px;
        flex: 0 0 40%;
        img {
          width: 100%;
        }
      }
      .nw-three-fifths {
        padding: 5px;
        flex: 0 0 60%;
      }
    }
    .nw-card-title {
      flex: 0 0 auto;
      padding: 4px;
      padding-right: 14px;
      padding-left: 14px;
      border-bottom-right-radius: 6px;
      background-color: $nw-lightgreyblue;
      font-family: 'SansBold', sans-serif;
      line-height: 20px;
      font-size: 14px;
      text-transform: uppercase;
      color: $nw-mediumgrey;
    }
    .nw-card-headline {
      font-family: 'SerifBold', serif;
      font-size: 16px;
      color: $nw-darkgrey;
      line-height: 1.4;
      padding: 10px;
      a {
        color: $nw-darkgrey;
        &:hover {
          text-decoration: underline;
        }
      }
    }
    
    .nw-card-indicator {
      flex: 1 1 50%;
      text-align: right;
      padding-right: 5px;
    }
    .nw-card-actions {
      flex: 1 1 50%;
      text-align: right;
      &.nw-card-actions-left {
        text-align: left;
        padding-left: 10px;
      }
      padding-right: 5px;
      z-index: 500;
      .dropdown {
        display: inline;
      }
      i {
        cursor: pointer;
        min-width: 32px;
        line-height: 28px;
        color: $nw-lightgrey;
        font-size: 18px;
        &:hover {
          color: $nw-darkblue;
        }
      }
      .nw-card-display-actions {
        display:inline;
      }
      .nw-card-model-actions {
        display:inline;
        float:right;
      }
      .btn-group {
        height: 28px;
        button {
          padding: 0px;
          height: 28px;
          border: solid 0px #000000;
          border-top-right-radius: 0px;
          border-top-left-radius: 0px;
          border-bottom-right-radius: 0px;
          border-bottom-left-radius: 0px;
          margin-top: 0px;
          margin-bottom: 0px;
          background-image: none;
          background-color: none;
          i {
            color: $nw-lightgrey;
          }
          &.active {
            background-color: none;
            border-bottom: solid 3px $nw-lightorange;
            box-shadow: none;
            i {
              color: $nw-mediumdarkgrey;
            }
          }
          &:hover {
            background-color: none;
            i {
              color: $nw-mediumdarkgrey;
            }
          }
        }
      }
    }
    .nw-promo-image {
      position: relative;
      text-align: center;
      height: 144px;
      width: 300px;
      overflow: hidden;
      display: inline-block;
      background-size: cover;
      border-radius: 5px 5px 0px 0px;
      background-position: center center;
    }
  }
  .nw-card-content {
    display: flex;
    flex-direction: column;
    flex: 1 1 100%;
    position: relative;
    padding: 20px;
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
    &.nw-white-back {
      background-color: #ffffff;
    }
    &.nw-card-horizontal {
      flex-direction: row;
      justify-content: space-between;
      align-items: center;
      flex-wrap: wrap;
      .nw-cms-third-tier-offer {
        padding-bottom: 10px;
        max-width: 200px;
        img {
          max-width: 200px;
        }
      }
      .nw-flex-full {
        flex: 1 1 100%;
      }
      .nw-one-third {
        flex: 0 0 33%;
        text-align: center;
        img {
          width: 100%;
        }
      }
      .nw-two-thirds {
        flex: 0 0 64%;
      }
      @media (max-width: $screen-xs-max) {
        flex-direction: column;
      }
    }
    iframe {
      height: 300px;
    }
    &.nw-center-horiz {
      text-align: center;
    }
    &.no-padding {
      height: 100%;
      padding-top: 0px;
      padding-bottom: 0px;
      padding-left: 0px;
      padding-right: 0px;
      border-radius: 6px;
    }
    &.nw-fixed-card {
      padding-top: 5px;
      justify-content: flex-start;
    }
    .nw-card-superhead {
      font-family: 'SourceSansPro-Regular', sans-serif;
      font-size: 14px;
      font-weight: 600;
      line-height: 1.57;
      color: $nw-lightgrey;
      margin-top: 10px;
    }
    .nw-card-headline {
      font-family: 'SerifBold', serif;
      font-size: 20px;
      color: $nw-darkgrey;
      line-height: 1.4;
      a {
        color: $nw-darkgrey;
        &:hover {
          text-decoration: underline;
        }
      }
    }
    .nw-card-subhead {
      font-family: 'SourceSansPro-Regular', sans-serif;
      font-size: 14px;
      font-weight: 600;
      line-height: 1.57;
      text-align: center;
      color: $nw-lightgrey;
      margin-top: 10px;
    }
    .nw-card-bottom-image {
      padding-top:10px;
      margin-bottom: -20px;
    }
    
  }
  .nw-card-flippy-doodle {
    position: absolute;
    top: -5px;
    left: 180px;
    @media(max-width: $screen-sm-max) {
      left: 120px;
    }
  }
  .nw-coupon-code {
    cursor: pointer;
    position: absolute;
    right: 0px;
    bottom: 0px;
    background-color: $nw-darkblue;
    border-top-left-radius: 6px;
    border-bottom-right-radius: 5px;
    color: $nw-white;
    height: 28px;
    line-height: 28px;
    font-size: 12px;
    padding-right: 12px;
    padding-left: 9px;
    &:hover {
      background-color: $nw-mediumblue;
    }
    span.nw-underlined {
      text-decoration: underline;
    }
    &.nw-code-copied {
      background-color: $nw-purple;
    }
  }
  .nw-card-footer {
  
  }
}
.nw-flippy-card {
  min-width: 280px;
  min-height: 280px;
  perspective: 1000px;
  &.nw-flipped {
    .nw-flippy-wrapper {
      -ms-transform: rotateY(-180deg); /* IE 9 */
      -webkit-transform: rotateY(-180deg); /* Safari */
      transform: rotateY(-180deg);
    }
  }
  .nw-flippy-wrapper {
    width: 100%;
    height: 100%;
    transform-style:preserve-3d;
    -webkit-transition: transform 0.6s;
    transition: transform 0.6s;
    .nw-card {
      width: 280px;
      height: 280px;
      position: absolute;
      flex-direction: column;
      -webkit-backface-visibility: hidden;
      backface-visibility: hidden;
      transform-style:preserve-3d;
      -webkit-transition: transform 0.6s;
      transition: transform 0.6s;
      .nw-card-actions {
        display: block;
        text-align: right;
        width: 100%;
        height: 28px;
        .nw-flippy-card-toggle {
          cursor: pointer;
          text-align: center;
          color: $nw-lightgrey;
          width: 28px;
          margin-left: 7px;
          padding: 4px;
          line-height: 20px;
        }
      }
      &.nw-card-face-back{
        -ms-transform: rotateY(-180deg); /* IE 9 */
        -webkit-transform: rotateY(-180deg); /* Safari */
        transform: rotateY(-180deg);
      }
      .nw-card-content {
        height: 222px;
        padding-top: 10px;
        padding-right: 10px;
        .nw-card-scrollable {
          height: 100%;
          align-items: stretch;
          overflow: scroll;
          font-size: 13px;
        }
        .nw-centered {
          width: 100%;
          text-align: center;
        }
      }
    }
  }
}

/* -- CSS for specific card instances -- */
.nw-prompt-card {
  .project-announce-quote {
    flex: 1 1 50%;
    .quote-text {
      text-align: center;
      font-size: 20px
    }
    .quotee{
      font-size: 16px;
    }
  }
  .action {
    flex: 1 1 auto;
    text-align: center;
  }
  .prompt-image {
    width: 112px;
    position: relative;
    height: 151px;
    flex: 1 1 auto;
    align-self: flex-end;
    img {
      position: absolute;
      bottom: 0px;
      right: 0px;
    }
  }
}
.nw-horiz-flex {
  display: flex;
  align-items: center;
}
.nw-horiz-flex > div {
  flex: 1 1 100%;
  text-align: center;
}
.nw-scrollable {
  overflow: scroll;
}
.nw-label {
  text-align: center;
  font-family: 'SansSemiBold', sans;
}
.nw-card.flex-large {
  .nw-card-content {
    a {
      color: $nw-darkblue;
    }
    
    font-size: 20px;
    line-height: 24px;
    .nw-card-headline {
      font-size: 26px;
      line-height: 30px;
      margin-bottom: 15px;
    }
  }
}
.nw-card.flex-medium {
  .nw-card-content {
    a {
      color: $nw-darkblue;
    }
    font-size: 16px;
    line-height: 20px;
    .nw-card-headline {
      font-size: 20px;
      line-height: 24px;
      margin-bottom: 10px;
    }
  }
}
.nw-card.flex-small {
  .nw-card-content {
    overflow: scroll;
    a {
      color: $nw-darkblue;
    }
  }
}

